--- a/controller/styles/portrait.css
+++ b/controller/styles/portrait.css
@@ -30,6 +30,13 @@ input  {
     flex-direction: row;
     position: relative;
 }
+
+#back-button-input {
+    position: absolute;
+    width: calc((100vh + 100vw * 2) / 3 * 0.18);
+    height: calc((100vh + 100vw * 2) / 3 * 0.18);
+}
+
 #dpad-container-portrait{
     display: flex;
     flex-direction: column;
@@ -42,9 +49,9 @@ input  {
 }
 
 #clarity-text-portrait {
-    font-size: 3vh;
+    font-size: 2.5vh;
     position: absolute;
-    top: 20%;
+    top: 15%;
     left: 10%;
     width: 80%;
     justify-content: center;
@@ -107,11 +114,11 @@ input  {
     padding-left: 0;
     padding-right: 0;
 }
+
 #enter-button img {
     width: calc((100vh + 100vw * 2) / 3 * 0.22);
     height: calc((100vh + 100vw * 2) / 3 * 0.22);   
 }
-
 
 #input-row {
     display: none; /* Use flexbox for layout */
@@ -119,7 +126,7 @@ input  {
     align-items: center; /* Center items horizontally */
     justify-content: center; /* Center items vertically (if there is height available) */
     position: absolute;
-    top: 40%; /* Position from the bottom */
+    top: 50%; /* Position from the bottom */
     left: 50%;  
     transform: translateX(-50%); 
     width: 50%; /* Adjust width as needed */
@@ -135,6 +142,19 @@ input  {
 
 
 @media (orientation: landscape) {
+    #back-button-input {
+        position: absolute;
+        top: 54vh;
+        right: 84vw;
+        width: calc((100vh + 100vw * 2) / 3 * 0.18);
+        height: calc((100vh + 100vw * 2) / 3 * 0.18);
+
+    }
+    #back-button-input img{
+        width: 100%;
+        height: 100;
+    }
+
     #eye-portrait {
 	display: flex;
 	position: absolute;
